--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="sidebar menu" />
-    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Sidebar Menu</title>
   </head>
   <body>
@@ -70,6 +71,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="./src/js/main.js"></script>
+    <script type="module" src="src/index.ts"></script>
   </body>
 </html>
